--- a/Главная.css
+++ b/Главная.css
@@ -1,7 +1,3 @@
-body, html {
-  overflow-x: hidden;
-}
- 
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(41,46,51,0.65), rgba(41,46,51,0.65)), url("images/header_bg.png");
   background-position: 50% 50%;
@@ -473,7 +469,7 @@ body, html {
 }
 
 .u-section-3 .u-gallery-1 {
-  height: 2031px;
+  height: 5104px;
   width: 1140px;
   grid-gap: 17px 17px;
   margin: -2188px auto 60px;
@@ -532,6 +528,66 @@ body, html {
   padding: 20px;
 }
 
+.u-section-3 .u-over-slide-13 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-14 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-15 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-16 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-17 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-18 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-19 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-20 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-21 {
+  padding: 20px;
+}
+
+.u-section-3 .u-back-slide-22 {
+  background-image: none;
+}
+
+.u-section-3 .u-back-image-22 {
+  object-position: 56.79% 50%;
+}
+
+.u-section-3 .u-over-slide-22 {
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-23 {
+  padding: 20px;
+}
+
+.u-section-3 .u-back-image-24 {
+  object-position: 85.58% 50%;
+}
+
+.u-section-3 .u-over-slide-24 {
+  padding: 20px;
+}
+
 @media (max-width: 1199px) {
    .u-section-3 {
     min-height: 2012px;
@@ -572,10 +628,10 @@ body, html {
   }
 
   .u-section-3 .u-gallery-1 {
-    height: 1673px;
     width: 940px;
     margin-top: -1525px;
     margin-left: calc(((100% - 1140px) / 2) + 100px);
+    height: 4203px;
   }
 }
 
@@ -627,11 +683,11 @@ body, html {
   }
 
   .u-section-3 .u-gallery-1 {
-    height: 2917px;
     width: 720px;
     margin-top: -2656px;
     margin-bottom: 40px;
     margin-left: calc(((100% - 1140px) / 2) + 210px);
+    height: 7317px;
   }
 
   .u-section-3 .u-gallery-inner-1 {
@@ -686,11 +742,11 @@ body, html {
   }
 
   .u-section-3 .u-gallery-1 {
-    height: 8888px;
     width: 540px;
     margin-top: -2188px;
     margin-bottom: 60px;
     margin-left: calc(((100% - 1140px) / 2) + 300px);
+    height: 22298px;
   }
 
   .u-section-3 .u-gallery-inner-1 {
@@ -740,9 +796,9 @@ body, html {
   }
 
   .u-section-3 .u-gallery-1 {
-    height: 5665px;
     width: 340px;
     margin-left: calc(((100% - 1140px) / 2) + 400px);
+    height: 14184px;
   }
 } .u-section-4 {
   background-image: none;
@@ -852,6 +908,22 @@ body, html {
   padding: 30px;
 }
 
+.u-section-4 .u-carousel-item-9 {
+  margin-right: 0;
+}
+
+.u-section-4 .u-over-slide-9 {
+  padding: 30px;
+}
+
+.u-section-4 .u-carousel-item-10 {
+  margin-right: 0;
+}
+
+.u-section-4 .u-over-slide-10 {
+  padding: 30px;
+}
+
 .u-section-4 .u-carousel-control-1 {
   position: absolute;
   left: 10px;
@@ -941,7 +1013,6 @@ body, html {
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 342px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -953,7 +1024,6 @@ body, html {
   }
 
   .u-section-4 .u-gallery-1 {
-    height: 168px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -1033,8 +1103,8 @@ body, html {
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/avatar.jpg");
-  background-position: 50% 50%;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/photo_2024-01-10_19-08-22.jpg");
+  background-position: 100% 50%;
 }
 
 .u-section-5 .u-container-layout-2 {
